MCKIN-10195 | Hot fix | Notification counter not appearing on small screen. (#2811)
MCKIN-10195 | Hot fix | DropDown on My-progress page show not correct on Iphone5.

--- a/static_v2/scss/_biapp.scss
+++ b/static_v2/scss/_biapp.scss
@@ -766,8 +766,8 @@ body.rtl {
 
 // Notification popup
 .xns-counter {
-  @include left(100%);
-  @include right(auto);
+  @include left(auto);
+  @include right(-23px);
 }
 
 
@@ -971,6 +971,9 @@ body.rtl {
     display: block;
     @include margin-right(-20px);
     @include margin-left(-20px);
+  }
+  .xns-counter {
+    @include right(0);
   }
 }
 
